# Building-a-debugger

./: .clang-format
sdb/: CMakeLists.txt  vcpkg.json
sdb/include/libsdb/: error.hpp  libsdb.hpp  pipe.hpp  process.hpp
sdb/src/: CMakeLists.txt  libsdb.cpp  pipe.cpp  process.cpp
sdb/test/: tests.cpp
sdb/tools/: CMakeLists.txt  sdb.cpp
